k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-gke-demo-svc
spec:
  type: ClusterIP
  selector:
    app: flask-gke-demo
  ports:
    - port: 80
      targetPort: 8080
